syntax = "proto3";
package ciao.time_tracking.absences;

import "ciao/common/date.proto";

// Absence data
message Absence {
  // Unique id (UUID)
  string id = 1;
  ciao.common.Date start_date = 2;
  ciao.common.Date end_date = 3;
  bool start_half_day = 4;
  bool end_half_day = 5;
  string time_type_id = 6;
  string user_id = 7;
  bool deleted = 8;
}
